cmo-module/src/main/resources/META-INF/resources/scss/cmo/_metadata.scss
/* ---------------------------------------------------------------------------
   metadata stuff
----------------------------------------------------------------------------*/
.cmo_titleStmt {
  padding-right: 5px;
}

.cmo_isArabic {
  direction: rtl;
  display: flex;
}

#cmo_metadataSection {
  td>ol {
    padding-left: 0;
  }

  ol li {
    list-style-type: none;
  }
}

/* TODO: refacture */
table > tbody > tr.cmo_noBorder > td, table > tbody > tr.cmo_noBorder > th {
  border-top: 0px;
  margin-top: 0px;
  padding: 0px 8px 8px 8px;
}
table > tbody > tr.cmo_border > td {
  padding: 0px 8px 8px 8px;
}

.cmo_contentType {
  color: $gray;
}

.cmo_spaceTable {
  border-collapse: separate;
  border-spacing: 15px 2px;
}

.cmo_addToBasket {
  float: right;
}

.cmo_physMedium li {
  margin-bottom: 5px;
}

span.standardized:before {
  content: '[';
}

span.standardized:after {
  content: ']';
}

span.standardized {
  color: $gray;
  margin-left: 0.5em;
}

.dragover {

  .file_set, .well {
    background-color: $info !important;

    .file_name a {
      color: $info !important;
    }
  }

  background-color: $info !important;
  color: $info !important;
}

[data-upload-target].well {
  text-align: center;
}

